# technolibre_home_mobile

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEBUG.md  README.base.md  README.md  TODO.md  add-android.sh  add-ios.sh  build-android.sh  build-ios.sh  build-owl.sh  capacitor.config.json  cordova-list-platform.sh  create-android.sh  create-ios.sh  create.sh  debug.keystore  diagnose-web.sh  generate-keystore.sh  install-android.sh  install-apk-android.sh  install-emulator-android.sh  install-license.sh  install.sh  open-dev.sh  open-nautilus-android-build.sh  package-lock.json  package.json  project-name-package.txt  project-name.txt  project-path.txt  run-android.sh  run-emulator-android.sh  run-ios.sh  run-web.sh  screenshot-web.sh  sync.sh  vite.config.ts  vitest.config.ts
.claude/rules/: 01-feature-catalog.md
android/: build.gradle  capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  marian_jni.cpp  native_usb.cpp  sentencepiece_android_compat.h  whisper_jni.cpp
doc/: ARCHITECTURE.md  BUILD.md  BUNDLE_PIPELINE.md  COMPONENTS.md  DATA_MODELS.md  DEBUG_MENU.md  EVENTS.md  I18N.md  NATIVE_PLUGINS.md  README.base.md  README.md  ROUTING.md  SECURITY_PLAN.md  SERVICES.md  bundle_extract_test_matrix.md  streamdeck_test_matrix.md
prototype_canvas_image_zone_indication/: index.html  script.js  style.css
scripts/: bsr.js  dedupe-xml-interpolation.mjs  precompile-owl-templates.mjs  smoke_test_emulator.sh
src/: .env.development  .env.production  .env.staging  index.html  vite-env.d.ts
src/__mocks__/: capacitor-secure-storage-plugin.ts
src/__mocks__/@aparajita/: capacitor-biometric-auth.ts
src/__mocks__/@capacitor/: core.ts  dialog.ts  local-notifications.ts
src/__mocks__/@capacitor-community/: sqlite.ts
src/__mocks__/@odoo/: owl.ts
src/__tests__/: appService.test.ts  biometryUtils.test.ts  bundleCodeService.test.ts  capacitorFsAdapter.test.ts  codeService.test.ts  codeStyleService.test.ts  cryptoUtils.test.ts  dataMigration.test.ts  databaseService.test.ts  debugUtils.test.ts  decompressGzip.test.ts  deploymentService.test.ts  deviceStatsPlugin.test.ts  editableCodeService.test.ts  enhancedComponent.test.ts  errors.test.ts  faceDetectionPlugin.test.ts  featureCatalog.test.ts  featureSection.test.ts  featureViewUtils.test.ts  graphicPrefs.test.ts  helpers.test.ts  i18n.test.ts  intentService.test.ts  keepAwakePlugin.test.ts  migrateVideoThumbnails.test.ts  migrationPopup.test.ts  migrationService.test.ts  migrations.test.ts  networkScanPlugin.test.ts  noteService.test.ts  notificationService.test.ts  ntfyService.test.ts  ocrPlugin.test.ts  owlAotEscape.test.ts  permissionsAudit.test.ts  processService.test.ts  rawHttpPlugin.test.ts  reminderService.test.ts  repoEditService.test.ts  (+23 more)
src/components/applications/: application_mixins.scss  applications_component.scss  applications_component.ts
src/components/content/: content_component.scss  content_component.ts
src/components/heading/: heading_component.scss  heading_component.ts
src/components/home/: home_component.scss  home_component.ts
src/components/intent/: intent_component.ts
src/components/navbar/: navbar_component.ts
src/components/note/: note_component.scss  note_component.ts
src/components/note_list/: note_list_component.scss  note_list_component.ts
src/components/options/: options_component.scss  options_component.ts
src/components/root/: root_component.scss  root_component.ts
src/components/tags/: tag_notes_component.scss  tag_notes_component.ts
src/components/video_camera/: video_camera_component.scss  video_camera_component.ts
src/constants/: errorMessages.ts  events.ts  storage.ts
src/css/: components.scss  datepicker.scss  mixins.scss  style.scss  vars.scss
src/data/: featureCatalog.ts
src/i18n/: en.ts  fr.ts  index.ts
src/js/: app.ts  enhancedComponent.ts  errors.ts  helpers.ts  owl-aot.ts  routes.ts
src/models/: application.ts  gitTypes.ts  graphicPrefs.ts  manifestProject.ts  note.ts  process.ts  reminder.ts  server.ts  syncConfig.ts  tag.ts  workspace.ts
src/plugins/: deviceStatsPlugin.ts  faceDetectionPlugin.ts  keepAwakePlugin.ts  marianPlugin.ts  networkScanPlugin.ts  ocrPlugin.ts  rawHttpPlugin.ts  sshPlugin.ts  streamDeckPlugin.ts  whisperPlugin.ts
src/public/: build_id.json  feature_touched.json
src/services/: appService.ts  bundleCodeService.ts  codeService.ts  codeStyleService.ts  dataMigration.ts  databaseService.ts  deploymentService.ts  editableCodeService.ts  galleryService.ts  marianService.ts  migrationService.ts  notificationService.ts  ntfyService.ts  processService.ts  reminderService.ts  repoEditService.ts  repoExtractorService.ts  repoFsFactory.ts  serverService.ts  streamDeckCameraStreamer.ts  streamDeckController.ts  streamDeckEventLog.ts  streamDeckLcdTextRenderer.ts  syncService.ts  tagService.ts  transcriptionService.ts  translationService.ts
src/services/git/: capacitorFsAdapter.ts
src/services/migrations/: addApplicationSyncFields.ts  addEditableReposTable.ts  addNotePriority.ts  addNtfyTokenColumn.ts  addOdooVersionToApplications.ts  addProcessDebugLogColumn.ts  addProcessResultColumn.ts  addProcessesTable.ts  addReminderCreatedAt.ts  addSelectedSyncConfigIds.ts  addServerWorkspacesTable.ts  addServersTable.ts  addSyncColumns.ts  addSyncConfigId.ts  addTagsTable.ts  (+4 more)
src/utils/: biometryUtils.ts  cryptoUtils.ts  debugUtils.ts  decompressGzip.ts  featureSection.ts  secureFileUtils.ts  serverResourceParsers.ts  storageUtils.ts  tarParser.ts  videoThumbnailUtils.ts  webViewUtils.ts
technolibre-home/: .gitignore  config.xml  package-lock.json  package.json
technolibre-home/www/: config.json  index.html
technolibre_home/: capacitor.config.json  package-lock.json  package.json  rename_android.sh  set_android_icon.py
technolibre_home/android/: capacitor.settings.gradle
technolibre_home/scripts/: generateComponent.js
technolibre_home/src/: .env.development  .env.production  .env.staging  index.html  vite-env.d.ts
util/: generate_qrcode.py
(+289 files in other folders)
